--- a/R/p11_GAP_Bootstrap_07_02_2017.Rmd
+++ b/R/p11_GAP_Bootstrap_07_02_2017.Rmd
@@ -263,11 +263,11 @@ glmnet_1_Gx <- train(Phenotype~., data=predictorlists[[ModelNum]], method="glmne
 save(glmnet_1_Gx, file=paste(output_dir,project_id,project_name,modelID[ModelNum],".rdata",sep=""), compress = T)
 
 ##### Model 2
-#ModelNum=2
-#set.seed(seed)
-#glmnet_2_GxS <- train(Phenotype~., data=predictorlists[[ModelNum]], method="glmnet", metric=metric, preProc=c("center", "scale"), trControl=control) 
+ModelNum=2
+set.seed(seed)
+glmnet_2_GxS <- train(Phenotype~., data=predictorlists[[ModelNum]], method="glmnet", metric=metric, preProc=c("center", "scale"), trControl=control) 
 #Save Models
-#save(glmnet_2_GxS, file=paste(output_dir,project_id,project_name,modelID[ModelNum],".rdata",sep=""), compress = T)
+save(glmnet_2_GxS, file=paste(output_dir,project_id,project_name,modelID[ModelNum],".rdata",sep=""), compress = T)
 
 ##### Model 3
 ModelNum=3
@@ -313,6 +313,17 @@ glmnet_8_Gx_d_prs <- train(Phenotype~., data=predictorlists[[ModelNum]], method=
 save(glmnet_8_Gx_d_prs, file=paste(output_dir,project_id,project_name,modelID[ModelNum],".rdata",sep=""), compress = T)
 
 
+
+##### Load all saved models
+for (ModelNum in 1:8){
+  load(file=paste(output_dir,project_id,project_name,modelID[ModelNum],".rdata",sep=""))  
+}
+
+
+##### Make list of all and save
+glmnet_models<-list(glmnet_1_Gx,glmnet_2_GxS,glmnet_3_PRS,glmnet_4_Dem,glmnet_5_PrsD,glmnet_6_Gx_PRS,glmnet_7_Gx_dem,glmnet_8_Gx_d_prs)
+save(glmnet_models, file=paste(output_dir,project_id,project_name,"_all_models",".rdata",sep=""), compress = T)
+
 ```
 
 
@@ -320,7 +331,8 @@ save(glmnet_8_Gx_d_prs, file=paste(output_dir,project_id,project_name,modelID[Mo
 
 ## Check most important variables for models and plot tables
 ```{r}
-#load(file=paste(output_dir,project_id,project_name,"Classification_model.rdata",sep=""))
+load(file=paste(output_dir,project_id,project_name,"_all_models",".rdata",sep=""))
+
 p1_glm<-glmnet_fit_b
 
 #Create loop to get Var imp and metrics
