--- a/R/p11_GAP_Bootstrap_07_02_2017.Rmd
+++ b/R/p11_GAP_Bootstrap_07_02_2017.Rmd
@@ -337,7 +337,7 @@ for (ModelNum in 1:8){
 }
 glm_var_list
 
-write.csv(glm_var_list, file=paste(output_dir,project_id,project_name,"_glmnet_all_mod_predictors.csv",sep=""),row.names=F,quote=FALSE)
+write.csv(glm_var_list, file=paste(output_dir,project_id,project_name,"_glmnet_all_mod_predictors.csv",sep=""),row.names=F,quote=FALSE) #save variables
 
 ##Create loop to get metrics
 #Resamples
@@ -398,7 +398,13 @@ for (pMetric in use_metrics){
 
 # Missclassification
 ```{r }
+
+##### Set up #####
+#project name defined
 project_name = "glmnet_missclass"
+#Gene expression data to use. 
+GX_data<-GX_DF_adj[1:4,1:27]
+
 dim(glmnet_1_Gx$pred)
 glmnet_1_Gx$pred[1:10,]
 glmnet_1_Gx$pred[1:10,]
@@ -407,12 +413,45 @@ tglmnettest<-table(glmnet_1_Gx$pred$rowIndex)
 summary(as.data.frame(tglmnettest)$Freq)
 
 
+
+
 glmnet_3_PRS$pred[1:10,]
 Function to make list of 
 
 
 ##pseudocode
 #Function 1: extract data
+data_get_fun <-function(list_models,names_models){
+  outputlist<- #define emptylist 
+  
+  for (Mod_Num in 1:length(list_models)){
+    tempMod<-list_models[Mod_Num]
+    tempModname <- names_models[Mod_Num]
+    #Check if glmnet
+    if (tempMod$method == "glmnet"){
+      tempHP<-tempMod$bestTune
+      tempDF<-tempMod$pred
+      tempDF<-filter(tempDF, alpha == tempHP[,"alpha"]  & lambda == tempHP[,"lambda"])
+      #tempDF$sampleID <- #add sampleID column to tempDF  
+    #check if GLM
+    #} else if (tempMod$method == "glm"){
+      #tempDF<-tempMod$pred
+      #tempDF$sampleID <- #add sampleID column to tempDF  
+  
+    } #else #error if not glm or glmnet
+      #print ("WARNING: input not recognised as caret glmnet or glm object")
+      #tempDF<-NA
+
+    
+    outputlist[[name]] <- tempDF #add tempDF to list
+  
+  } #end bracket for loop
+  return(outputlist)
+} #end bracket function 
+
+<-data_get_fun[glmnet_models,modelID]
+
+
 outputlist<- #define emptylist 
 for Mod_Num in 1:length(modellist){
   tempMod<-modelist(Mod_Num)
